--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "front-end-test",
+  "homepage": "https://jamesmatheri.github.io/front-end-test/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build",   
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+     "predeploy":"npm run build",
+    "deploy":"gh-pages -d dist"
   },
   "dependencies": {
+    "gh-pages": "^6.3.0",
     "highcharts": "^12.2.0",
     "highcharts-react-official": "^3.2.2",
     "react": "^19.1.0",
